Fix logout position and wrapping. Selected tab cirle now a cirlce (#694)
Made description text wrap

Fix positioning of tooltips for the trashcan in include/exclude tab

Added borders to members table and removed wrapping from listing column

Added radius to border around members

Fixed update description of grouping input field

Moved border to card body, so the border is correct on smaller resolutions

Fix styling issue in scss

Fix merge conflict

Added class to only remove corners on edit description box

--- a/src/main/resources/static/scss/sections/_groupings.scss
+++ b/src/main/resources/static/scss/sections/_groupings.scss
@@ -142,3 +142,8 @@
         }
     }
 }
+
+.edit-description-input-box {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
